--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -29,14 +29,29 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\hp\\AppData\\Local\\Temp\\ipykernel_18964\\4080736814.py:1: DeprecationWarning: \n",
+      "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
+      "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
+      "but was not found to be installed on your system.\n",
+      "If this would cause problems for you,\n",
+      "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
+      "        \n",
+      "  import pandas as pd\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -187,19 +202,19 @@
        "6   6   0.74      Ideal     E     VS2   61.8   57.0  5.76  5.79  3.57   3229"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv(\"gemstone.csv\")\n",
+    "df = pd.read_csv(\"data/gemstone.csv\")\n",
     "df.head(7)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +344,7 @@
        "4   4   1.70    Premium     G     VS2   62.6   59.0  7.65  7.61  4.77  14453"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -340,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -368,7 +383,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -379,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +436,7 @@
        "0"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -432,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -452,7 +467,7 @@
        "Index(['cut', 'color', 'clarity'], dtype='object')"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -463,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +487,7 @@
        "Index(['carat', 'depth', 'table', 'x', 'y', 'z', 'price'], dtype='object')"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -483,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -499,7 +514,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -510,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -576,7 +591,7 @@
        "freq     92454   44391   53272"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -587,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -727,7 +742,7 @@
        "max        10.010000      31.300000   18818.000000  "
       ]
      },
-     "execution_count": 55,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -738,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -753,7 +768,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -764,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -781,7 +796,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -792,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -810,7 +825,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -821,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -964,7 +979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1037,7 +1052,7 @@
        "4    Premium     G     VS2"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1048,7 +1063,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1117,7 +1132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1126,7 +1141,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1149,7 +1164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1159,7 +1174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1168,7 +1183,7 @@
        "array(['Premium', 'Very Good', 'Ideal', 'Good', 'Fair'], dtype=object)"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1179,7 +1194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1189,7 +1204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1199,7 +1214,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1210,7 +1225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1219,7 +1234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1228,7 +1243,7 @@
        "array(['F', 'J', 'G', 'E', 'D', 'H', 'I'], dtype=object)"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1239,7 +1254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1248,7 +1263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1259,7 +1274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1402,7 +1417,7 @@
        "6   0.74    5      2        4   61.8   57.0  5.76  5.79  3.57   3229"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
